report: Extend the memsistor section. Add TODOs.

--- a/report/preamble.sty
+++ b/report/preamble.sty
@@ -21,8 +21,7 @@
 %
 % Examples:
 %    \includegraphics[width=\textwidth]{foo.png}
-\usepackage[dvipdfmx]{graphicx}
-\usepackage{bmpsize}
+\usepackage{graphicx}
 
 % Sub figures.
 %
