--- a/report/references.bib
+++ b/report/references.bib
@@ -110,7 +110,7 @@
 }
 
 % Robin
-@article{memsistor,
+@article{memristor_conditioning,
   title={Experimental demonstration of associative memory with memristive neural networks},
   author={Pershin, Yuriy V and Di Ventra, Massimiliano},
   journal={Neural Networks},
@@ -230,4 +230,26 @@
   pages={e85175},
   year={2014},
   publisher={Public Library of Science}
+}
+
+@article{chua_memristor,
+  title={Memristor-the missing circuit element},
+  author={Chua, Leon O},
+  journal={Circuit Theory, IEEE Transactions on},
+  volume={18},
+  number={5},
+  pages={507--519},
+  year={1971},
+  publisher={IEEE}
+}
+
+@article{hp_memristor_found,
+  title={The missing memristor found},
+  author={Strukov, Dmitri B and Snider, Gregory S and Stewart, Duncan R and Williams, R Stanley},
+  journal={nature},
+  volume={453},
+  number={7191},
+  pages={80--83},
+  year={2008},
+  publisher={Nature Publishing Group}
 }
