--- a/report/report.tex
+++ b/report/report.tex
@@ -51,7 +51,7 @@ Case of consistent internal correlations in the memory was as well addressed, an
 \subsubsection{Implementation Example: Optical Information Processing}
 In paper from D.Psaltis and N.Farhat(1985) \cite{optical_processing}, thresholding and feedback properties from Hopfield model was used in implementation of an optical system that processes optical information.
 
-Enhanced error-correcting capability is one important outcome which is benefited from Nonlinearity of Hopfield model. With $M$ words of each binary vector $v_i$ with length of N bits, matrix $T_i_j$ represents a storage of information. Matrix $T_{ij}$ gets multiplied by a stored binary vector $v'_i$ results in a \texttt{pseudoeigensystem} if $N$ is sufficiently larger than $M$. This indicated that the output vector $v''_i$ equals the input.
+Enhanced error-correcting capability is one important outcome which is benefited from Nonlinearity of Hopfield model. With $M$ words of each binary vector $v_i$ with length of N bits, matrix $T_{ij}$ represents a storage of information. Matrix $T_{ij}$ gets multiplied by a stored binary vector $v'_i$ results in a \texttt{pseudoeigensystem} if $N$ is sufficiently larger than $M$. This indicated that the output vector $v''_i$ equals the input.
 
 Supposed nonlinear iterative procedural experiments of certain number of known bits $N_1$ and the rest bits set to zero inside total of $N$ bits long vector were addressed to discover under what conditions the number of correct bits $N_2$ in output will be higher than $N_1$. A SNR(signal-to-noise ratio) equation which consists ratio of the expected value to the standard deviation on the same output vector, was used. As the Hopfield model has studied on the convergence property with respect to asynchronous operations, insensitivity to imperfections(nonuniformities, exact form of the threshold operation and errors in $T_{ij}$ matrix) and correct convergence obtained with thresholded $T_{ij}$. These all become most desired properties in optical implementation. Detailed optical implementation with 2D inputs was presented which was based on spatial-frequency multiplexing. Methods using Fourier transform, transmitting amplitude(weighted sum) and integral of the product of the input images were introduced in such an implementation. The robustness of a such system with nonlinear feedback becomes the most important feature.
 As a conclusion, the implementation with the capabilities and limitations of optical techniques matches excellently with the Hopfield model that requires global, linear operations and local, point nonlinearities in a fully interconnected optical system.
@@ -61,7 +61,7 @@ As a conclusion, the implementation with the capabilities and limitations of opt
 \subsubsection{Memory Capacity with Modification: \\ replacing sigmoid neuron with a nonmonotonic neuron}
 In paper from S.Yoshizawa, M.Morita and S.Amari(1992) \cite{capacity_of_nonmonotonic_model} it started with introduction of a new method by replacing sigmoid neuron with a nonmonotonic neuron and discussed theorectically on potential of absolute capacity(the maximum number of randomly generated patterns which are memorized as the equilibria of the network with the correlation-type connection weights) to be of order $n$ (nearly equal to 0.4n).
 
-Previous memory capacities were briefly introduced that Hopfield(1982) model's associative memory capacity is 0.15n, the proven result of absolute capacity is asymptotically $ \frac{n}{2\log{n}} $ from McEliece, Posner, Rodemich, & Venkatesh, 1987; Weisbuch, 1985), and relative capacity(recalling process) is about 0.14n(with admission of small percent of errors) with replica method but about 0.16n with a simply approximation method from respectively two different research work.
+Previous memory capacities were briefly introduced that Hopfield(1982) model's associative memory capacity is 0.15n, the proven result of absolute capacity is asymptotically $ \frac{n}{2\log{n}} $ from McEliece, Posner, Rodemich, \& Venkatesh, 1987; Weisbuch, 1985), and relative capacity(recalling process) is about 0.14n(with admission of small percent of errors) with replica method but about 0.16n with a simply approximation method from respectively two different research work.
 
 Various research suggestions were mentioned though all failed to deal completely with flaws of the conventional model, that both absolute and relative capacities are too small as well as the existence of large number of spurious memories. With a nonmonotonic neuron the result turned to be 0.4n for the absolute capacity which is even greater than relative capacity while the spurious memory disappeared.
 
@@ -132,23 +132,23 @@ TODO: Extend. Artificial synapses experiment using memsistors conducted in 2010,
 
 TODO: Extend. The memsistor was hyphosized in 1972 by Leon Chua, the father of non-linear curcuit theory, who presented it as the missing fundamental cirtuit element (see figure \ref{fig:circuit_elements}) \cite{chua_memristor}. Looking at the current~$I$ and voltage~$V$ plot, a memsistor may be identified by the pinched hysteresis loop going through origo (see figure \ref{fig:pinched_hysteresis}. TODO: Explain the underlying reason of the hysteresis loop, i.e. alterating between two states (metastable switch).
 
-\begin{figure}[htbp]
-	\begin{center}
-		\includegraphics[width=0.5\textwidth]{inc/circuit_elements.png}
-		\caption{Fundamental circuit elements.\protect\footnotemark}
-		\label{fig:circuit_elements}
-	\end{center}
-\end{figure}
-\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Two-terminal_non-linear_circuit_elements.svg}}
+%\begin{figure}[htbp]
+%	\begin{center}
+%		\includegraphics[width=0.5\textwidth]{inc/circuit_elements.png}
+%		\caption{Fundamental circuit elements.\protect\footnotemark}
+%		\label{fig:circuit_elements}
+%	\end{center}
+%\end{figure}
+%\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Two-terminal_non-linear_circuit_elements.svg}}
 
-\begin{figure}[htbp]
-	\begin{center}
-		\includegraphics[width=0.5\textwidth]{inc/pinched_hysteresis.png}
-		\caption{A pinched hysteresis loop plotted on an IV-curve.\protect\footnotemark}
-		\label{fig:pinched_hysteresis}
-	\end{center}
-\end{figure}
-\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Pinched_crossing_hysteresis.png}}
+%\begin{figure}[htbp]
+%	\begin{center}
+%		\includegraphics[width=0.5\textwidth]{inc/pinched_hysteresis.png}
+%		\caption{A pinched hysteresis loop plotted on an IV-curve.\protect\footnotemark}
+%		\label{fig:pinched_hysteresis}
+%	\end{center}
+%\end{figure}
+%\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Pinched_crossing_hysteresis.png}}
 
 TODO: Extend. In 2008, HP released a paper titled \textit{The missing memristor found}, which outlined the hardware implementation of a memsistor \cite{hp_memristor_found}, thus validating the existence of the hypothesized memsistors circuit element. Retrospectively, several research groups had discovered circuits with the tell-tale properties of memsistor, i.e. with a pinched hysteresis loop. TODO: Include ref about prior research, before 2008.
 
