--- a/report/references.bib
+++ b/report/references.bib
@@ -44,6 +44,26 @@
 }
 
 % Lucas
+@techreport{smolensky1986information,
+  title={Information processing in dynamical systems: Foundations of harmony theory},
+  author={Smolensky, Paul},
+  year={1986},
+  institution={DTIC Document}
+}
+@inproceedings{hinton2012better,
+  title={A better way to pretrain deep boltzmann machines},
+  author={Hinton, Geoffrey E and Salakhutdinov, Ruslan R},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2447--2455},
+  year={2012}
+}
+@inproceedings{dahl2010phone,
+  title={Phone recognition with the mean-covariance restricted Boltzmann machine},
+  author={Dahl, George and Mohamed, Abdel-rahman and Hinton, Geoffrey E and others},
+  booktitle={Advances in neural information processing systems},
+  pages={469--477},
+  year={2010}
+}
 @article{metropolis1953equation,
   title={Equation of state calculations by fast computing machines},
   author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
