--- a/report/report.tex
+++ b/report/report.tex
@@ -132,23 +132,23 @@ TODO: Extend. Artificial synapses experiment using memsistors conducted in 2010,
 
 TODO: Extend. The memsistor was hyphosized in 1972 by Leon Chua, the father of non-linear curcuit theory, who presented it as the missing fundamental cirtuit element (see figure \ref{fig:circuit_elements}) \cite{chua_memristor}. Looking at the current~$I$ and voltage~$V$ plot, a memsistor may be identified by the pinched hysteresis loop going through origo (see figure \ref{fig:pinched_hysteresis}. TODO: Explain the underlying reason of the hysteresis loop, i.e. alterating between two states (metastable switch).
 
-%\begin{figure}[htbp]
-%	\begin{center}
-%		\includegraphics[width=0.5\textwidth]{inc/circuit_elements.png}
-%		\caption{Fundamental circuit elements.\protect\footnotemark}
-%		\label{fig:circuit_elements}
-%	\end{center}
-%\end{figure}
-%\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Two-terminal_non-linear_circuit_elements.svg}}
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{inc/circuit_elements.png}
+		\caption{Fundamental circuit elements.\protect\footnotemark}
+		\label{fig:circuit_elements}
+	\end{center}
+\end{figure}
+\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Two-terminal_non-linear_circuit_elements.svg}}
 
-%\begin{figure}[htbp]
-%	\begin{center}
-%		\includegraphics[width=0.5\textwidth]{inc/pinched_hysteresis.png}
-%		\caption{A pinched hysteresis loop plotted on an IV-curve.\protect\footnotemark}
-%		\label{fig:pinched_hysteresis}
-%	\end{center}
-%\end{figure}
-%\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Pinched_crossing_hysteresis.png}}
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{inc/pinched_hysteresis.png}
+		\caption{A pinched hysteresis loop plotted on an IV-curve.\protect\footnotemark}
+		\label{fig:pinched_hysteresis}
+	\end{center}
+\end{figure}
+\footnotetext{Original image (CC BY-SA): \url{https://en.wikipedia.org/wiki/File:Pinched_crossing_hysteresis.png}}
 
 TODO: Extend. In 2008, HP released a paper titled \textit{The missing memristor found}, which outlined the hardware implementation of a memsistor \cite{hp_memristor_found}, thus validating the existence of the hypothesized memsistors circuit element. Retrospectively, several research groups had discovered circuits with the tell-tale properties of memsistor, i.e. with a pinched hysteresis loop. TODO: Include ref about prior research, before 2008.
 
