--- a/report/report.tex
+++ b/report/report.tex
@@ -198,16 +198,13 @@ foo
 
 %Lucas.
 
-Unfortunately, the Boltzmann Machine can only be used for simpler problem domains. If the BM is scaled beyond any trivial implementation it becomes too slow and almost stops learning. This is due to the fact that all units of the BM are fully connected to each other which does not scale well. In order to use the BM for bigger tasks a restriction has to be made. Namely, connections between units in the same layer can not be allowed. This is called the Restricted Boltzmann Machine (or "Harmonium" as the original author referred to it) \cite{smolensky1986information}.
+Unfortunately, the Boltzmann Machine can only be used for simpler problem domains. If the BM is scaled beyond any trivial domain it becomes too slow and almost stops learning. This is due to the fact that all units of the BM are fully connected to each other which does not scale well.
 
-Versions of the Restricted Boltzmann Machine have been successfully used in deep learning \cite{hinton2012better} and speech recognition \cite{dahl2010phone}.
+In order to use the BM for bigger tasks a restriction has to be made. Namely, connections between units in the same layer can not be allowed. This is called the Restricted Boltzmann Machine (or "Harmonium" as the original author referred to it) \cite{smolensky1986information}.
 
-% Used for deep learning, can learn to create images based on what it has earlier seen.
-% Used for speech recognition.
+Versions of the Restricted Boltzmann Machine (RBM) have been successfully used in deep learning \cite{hinton2012better} and speech recognition \cite{dahl2010phone}.
 
-% NOTES:
-%Pure Boltzman does not scale, thus impractical.
-%Restricted Boltzman, basis for deep learning today, using multiple layers.
+The general idea when using RBM's in deep learning is to "stack" several RBM's on top of each other. The activities of the units in the hidden layer of one RBM can be used as input vector for an other RBM. This way the overall system does not have the problem with scalability that the ordinary Boltzmann Machine suffered. Every time a new layer is added on top the generative model is improved.
 
 \subsection{Memory Resistor}
 
@@ -249,7 +246,7 @@ Preliminary list of references, cited to force inclusion within the bibliography
 \cite{computational_abilities} \cite{optical_processing} \cite{capacity_of_nonmonotonic_model} \cite{stimulus_unitization_and_aging}
 
 % Lucas
-\cite{ackley1985learning} \cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
+%\cite{ackley1985learning} \cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
 
 % Robin
 \cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex} \cite{ahah}
