report: Move nonmonotonic.jpg to inc directory.

--- a/report/report.tex
+++ b/report/report.tex
@@ -70,7 +70,7 @@ By then the existence of equilibrium solutions and local stability, the authors 
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[scale = 0.8]{nonmonotonic.JPG}
+	\includegraphics[scale = 0.8]{inc/nonmonotonic.jpg}
 	\caption{The nonmonotonic output function, S.Yoshizawa, M.Morita and S.Amari(1992)}
 	\label{fig:nonmonotonic}
 \end{figure}
